# openapi/openapi_spec.json
@@ -6084,6 +6084,12 @@
               }
             ],
             "nullable": true
+          },
+          "reference_id": {
+            "type": "string",
+            "description": "reference to the payment at connector side",
+            "example": "993672945374576J",
+            "nullable": true
           }
         }
       },
